--- a/views/qrcode.ejs
+++ b/views/qrcode.ejs
@@ -19,30 +19,11 @@
 <body>
     <div id="tabela">
         <table> 
-            <tr>
-                <th>Nome</th>
-                <th>Convidado</th>
-                <th>Descrição</th>
-            </tr>
-            <tr>
-                <td>kaique</td>
-                <td>Convidado</td>
-                <td>Convite</td>
-            </tr>
-            <tr>
-                <td>kaique</td>
-                <td>Convidado</td>
-                <td>Convite</td>
-            </tr>
-            <tr>
-                <td>kaique</td>
-                <td>Convidado</td>
-                <td>Convite</td>
-            </tr>
+            <img src="/img/convite.jpeg">
         </table>
     </div>
     <p>
-        <input type="button" value="Criar PDF" id="btnImprimir" onclick="CriaPDF()" />
+        <input type="button" value="Imprimir" id="btnImprimir" onclick="CriaPDF()" />
     </p>
 </body>
 <script>
