--- a/public/css/one2.css
+++ b/public/css/one2.css
@@ -493,6 +493,26 @@ label[for="bt_menu"] {
 
 }
 
+#avatarFotor {
+    width: 300px;
+    max-height: 300px;
+    border-radius: 50%;
+    margin: 25px;
+}
+
+.carousel-control-prev-icon{
+    color: black;
+    background-color: #4682B4;
+    z-index: 999; 
+}
+
+.carousel-control-next-icon{
+    color: black;
+    background-color: #d03387;
+    z-index: 999; 
+
+}
+
 /* FIM PADRINHOS */
 
 /* LUA MEL */
