--- a/views/one2.ejs
+++ b/views/one2.ejs
@@ -9,6 +9,7 @@
     <title>Lilian & Fernando</title>
 </head>
 
+<div id="testee">
 <body>
     <header>
 
@@ -16,6 +17,8 @@
 
 
     </header>
+
+
 
     <!--HOME-->
     <section id="fundoIndex">
@@ -546,5 +549,7 @@
 
 
 </body>
+
+</div>
 
 </html>
