--- a/public/css/one2.css
+++ b/public/css/one2.css
@@ -513,9 +513,6 @@ label[for="bt_menu"] {
 
 }
 
-#testee{
-    width: 100vw;
-}
 
 /* FIM PADRINHOS */
 
@@ -527,6 +524,7 @@ label[for="bt_menu"] {
     background-size: cover;
     background-color: #fafafa;
     width: 100%;
+    max-width: 100vw;
     float: left;
     position: relative;
     min-height: 100vh;
