--- a/public/css/one2.css
+++ b/public/css/one2.css
@@ -523,8 +523,8 @@ label[for="bt_menu"] {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #fafafa;
-    width: 100%;
-    max-width: 100vw;
+  
+    width: 100vw;
     float: left;
     position: relative;
     min-height: 100vh;
