--- a/views/one2.ejs
+++ b/views/one2.ejs
@@ -184,54 +184,63 @@
                                 aria-label="Slide 6"></button>
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
                                 aria-label="Slide 7"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"
+                                aria-label="Slide 8"></button>
                         </div>
                         <div class="carousel-inner" id="avatarFotor">
                             <div class="carousel-item active">
                                 <img src="/img/sandro.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Sandro</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/img/felipe.jfif" class="d-block w-100" alt="...">
+                                <img src="/img/felipe.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Felipe</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/felipe-lilian.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Felipe</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/marks.jpeg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Marks</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/kaique.jfif" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Kaique</h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/antoni.jpeg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5> Antony</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/ronaldo.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Ronaldo</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/marisamarido.jpeg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Mr</h5>
                                     <p></p>
                                 </div>
                             </div>
@@ -262,71 +271,71 @@
 
                 <div class="col">
 
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="0"
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="1"
                                 aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="2"
                                 aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="3"
                                 aria-label="Slide 4"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="4"
                                 aria-label="Slide 5"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="5"
                                 aria-label="Slide 6"></button>
                         </div>
                         <div class="carousel-inner" id="avatarFotor">
                             <div class="carousel-item active">
                                 <img src="/img/nanda.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Nanda</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/img/patricia.jpeg" class="d-block w-100" alt="...">
+                                <img src="/img/patricia.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Patricia</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/kamila.jpeg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Kamila</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="/img/eduarda.jpeg" class="d-block w-100" alt="...">
+                                <img src="/img/eduarda.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Eduarda</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/cintia.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Cintia</h5>
                                     <p></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/img/marisa.jpeg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> </h5>
+                                    <h5> Marisa</h5>
                                     <p></p>
                                 </div>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions1"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions1"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
