--- a/views/one2.ejs
+++ b/views/one2.ejs
@@ -92,10 +92,11 @@
 
 
                 <h1 class="fontSubFesta">INFORMAÇÕES</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived not only five centuries.</p>
+                <p>A cerimônia comecará as 16:00 hrs, solicitamos a todos que compareçam
+                    com uma hora de antecedência. No Local será realizado a cerimonia,
+                    jantar e festa.
+            
+                </p>
                 <h1 class="fontSubFesta">ENDEREÇO</h1>
                 <p>
                     R. Finlândia, 261 - Parque das Nações, Santo André - SP, 09280-090
@@ -104,7 +105,7 @@
 
 
                 <div class="card-body">
-                    <a href="" class="btn btn-primary"> Como Chegar</a>
+                    <a href="https://www.google.com/maps/place/R.+Finl%C3%A2ndia,+261+-+Parque+das+Na%C3%A7%C3%B5es,+Santo+Andr%C3%A9+-+SP,+09280-090/@-23.6365556,-46.5136345,3a,75y,13.36h,89.24t/data=!3m6!1e1!3m4!1sjhvKINnCVtBD-SmfLmi14A!2e0!7i16384!8i8192!4m5!3m4!1s0x94ce681ef6bdf907:0x2548f01633ddcb1a!8m2!3d-23.6363586!4d-46.5136108" class="btn btn-primary"> Como Chegar</a>
                 </div>
 
 
@@ -396,7 +397,7 @@
 
 
         <div class="bloco">
-            <h2>PRESENTES</h2>
+            <h1>LISTA DE PRESENTES</h1>
 
 
             <div class="card-group">
@@ -444,7 +445,7 @@
 
             </div>
 
-            <h2>Caso queira nos presentear</h2>
+            <h2>Obrigado</h2>
 
         </div>
 
