--- a/views/one2.ejs
+++ b/views/one2.ejs
@@ -93,7 +93,7 @@
 
                 <h1 class="fontSubFesta">INFORMAÇÕES</h1>
                 <p>A cerimônia comecará as 16:00 hrs, solicitamos a todos que compareçam
-                    com uma hora de antecedência. No Local será realizado a cerimonia,
+                    com uma hora de antecedência. No Local será realizado a cerimônia,
                     jantar e festa.
             
                 </p>
