--- a/public/css/one2.css
+++ b/public/css/one2.css
@@ -367,6 +367,11 @@ label[for="bt_menu"] {
 
 }
 
+#nossaFoto{
+    width: 100%;
+    height: 80%;
+}
+
 #dFundoSobre{
    
     text-align: center;
