--- a/views/one2.ejs
+++ b/views/one2.ejs
@@ -95,7 +95,7 @@
                 <p>A cerimônia comecará as 16:00 hrs, solicitamos a todos que compareçam
                     com uma hora de antecedência. No Local será realizado a cerimônia,
                     jantar e festa.
-            
+
                 </p>
                 <h1 class="fontSubFesta">ENDEREÇO</h1>
                 <p>
@@ -105,7 +105,8 @@
 
 
                 <div class="card-body">
-                    <a href="https://www.google.com/maps/place/R.+Finl%C3%A2ndia,+261+-+Parque+das+Na%C3%A7%C3%B5es,+Santo+Andr%C3%A9+-+SP,+09280-090/@-23.6365556,-46.5136345,3a,75y,13.36h,89.24t/data=!3m6!1e1!3m4!1sjhvKINnCVtBD-SmfLmi14A!2e0!7i16384!8i8192!4m5!3m4!1s0x94ce681ef6bdf907:0x2548f01633ddcb1a!8m2!3d-23.6363586!4d-46.5136108" class="btn btn-primary"> Como Chegar</a>
+                    <a href="https://www.google.com/maps/place/R.+Finl%C3%A2ndia,+261+-+Parque+das+Na%C3%A7%C3%B5es,+Santo+Andr%C3%A9+-+SP,+09280-090/@-23.6365556,-46.5136345,3a,75y,13.36h,89.24t/data=!3m6!1e1!3m4!1sjhvKINnCVtBD-SmfLmi14A!2e0!7i16384!8i8192!4m5!3m4!1s0x94ce681ef6bdf907:0x2548f01633ddcb1a!8m2!3d-23.6363586!4d-46.5136108"
+                        class="btn btn-primary"> Como Chegar</a>
                 </div>
 
 
@@ -135,7 +136,51 @@
             <div class="row">
                 <div class="col">
 
-                    <img src="/img/fly.png" class="imgEvento">
+                     <!-- CARROSSEL -->
+                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner" id="nossaFoto">
+                            <div class="carousel-item active">
+                                <img src="/img/play.jpeg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5> </h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/fly.png" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5> </h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/parana.jpeg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5> </h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button"
+                            data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button"
+                            data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <!-- FIM CARROSSEL -->
 
 
                 </div>
@@ -286,6 +331,8 @@
                                 aria-label="Slide 5"></button>
                             <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="5"
                                 aria-label="Slide 6"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions1" data-bs-slide-to="6"
+                                aria-label="Slide 7"></button>
                         </div>
                         <div class="carousel-inner" id="avatarFotor">
                             <div class="carousel-item active">
@@ -327,6 +374,13 @@
                                 <img src="/img/marisa.jpeg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5> Marisa</h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/img/madre.jpeg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5> Silvia</h5>
                                     <p></p>
                                 </div>
                             </div>
