--- a/views/qrcode.ejs
+++ b/views/qrcode.ejs
@@ -1,50 +1,50 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>Converter uma Tabela para PDF usando JavaScript</title>
-    <style>
-        table
-        {
-            width: 300px;
-            font: 17px Calibri;
-        }
-        table, th, td 
-        {
-            border: solid 1px #DDD;
-            border-collapse: collapse;
-            padding: 2px 3px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/one2.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lilian & Fernando</title>
 </head>
-<body>
-    <div id="tabela">
-        <table> 
-            <img src="/img/convite.jpeg">
-        </table>
+
+
+<body id="fundoLanding">
+
+
+    <div class="container-sm" id="painelLanding">
+
+        <h1>Menu</h1>
+
+
+        <a href="/docs/savedate.pdf">
+            <button type="button" class="btn btn-outline-primary">Convite Digital</button>
+        </a>
+        <br>
+        <a href="http://casamentofernandoelilian.com.br/">
+            <button type="button" class="btn btn-outline-primary">Acessar o Site</button>
+        </a>
+       
+        <br>
+        <a href="http://casamentofernandoelilian.com.br/#presentes">
+            <button type="button" class="btn btn-outline-primary">Lista de Presentes</button>
+        </a>
+
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
+
+
+
+
+
     </div>
-    <p>
-        <input type="button" value="Imprimir" id="btnImprimir" onclick="CriaPDF()" />
-    </p>
+
+
 </body>
-<script>
-    function CriaPDF() {
-        var minhaTabela = document.getElementById('tabela').innerHTML;
-        var style = "<style>";
-        style = style + "table {width: 100%;font: 20px Calibri;}";
-        style = style + "table, th, td {border: solid 1px #DDD; border-collapse: collapse;";
-        style = style + "padding: 2px 3px;text-align: center;}";
-        style = style + "</style>";
-        // CRIA UM OBJETO WINDOW
-        var win = window.open('', '', 'height=700,width=700');
-        win.document.write('<html><head>');
-        win.document.write('<title>Empregados</title>');   // <title> CABEÇALHO DO PDF.
-        win.document.write(style);                                     // INCLUI UM ESTILO NA TAB HEAD
-        win.document.write('</head>');
-        win.document.write('<body>');
-        win.document.write(minhaTabela);                          // O CONTEUDO DA TABELA DENTRO DA TAG BODY
-        win.document.write('</body></html>');
-        win.document.close(); 	                                         // FECHA A JANELA
-        win.print();                                                            // IMPRIME O CONTEUDO
-    }
-</script>
+
 </html>
