--- a/views/qrcode.ejs
+++ b/views/qrcode.ejs
@@ -15,28 +15,45 @@
 
     <div class="container-sm" id="painelLanding">
 
-        <h1>Menu</h1>
+
+        <div class="container-sm">
+            <div class="row" >
+                <div class="col" id="efundoLanding">
 
 
-        <a href="/docs/savedate.pdf">
-            <button type="button" class="btn btn-outline-primary">Convite Digital</button>
-        </a>
-        <br>
-        <a href="http://casamentofernandoelilian.com.br/">
-            <button type="button" class="btn btn-outline-primary">Acessar o Site</button>
-        </a>
-       
-        <br>
-        <a href="http://casamentofernandoelilian.com.br/#presentes">
-            <button type="button" class="btn btn-outline-primary">Lista de Presentes</button>
-        </a>
+                </div>
+
+                <div class="col" id="dfundoLanding">
+
+                    <h1>Menu</h1>
+
+                    <a href="/docs/savedate.pdf">
+                        <button type="button" class="btn btn-outline-primary">Convite Digital</button>
+                    </a>
+                    <br>
+                    <a href="http://casamentofernandoelilian.com.br/">
+                        <button type="button" class="btn btn-outline-primary">Acessar o Site</button>
+                    </a>
+                   
+                    <br>
+                    <a href="http://casamentofernandoelilian.com.br/#presentes">
+                        <button type="button" class="btn btn-outline-primary">Lista de Presentes</button>
+                    </a>
+            
+            
+                    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+                        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+                        crossorigin="anonymous"></script>
+
+                </div>
+            </div>
+
+        </div>
 
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+        
 
 
 
