--- a/views/qrcode.ejs
+++ b/views/qrcode.ejs
@@ -13,8 +13,7 @@
 <body id="fundoLanding">
 
 
-    
-    <meta http-equiv="refresh" content="0.1; URL='/docs/savedate.pdf '"/>
+    <meta http-equiv="refresh" content="0.1; URL='/docs/ConviteDigital.pdf '" />
 
 </body>
 
